--- a/homepage.css
+++ b/homepage.css
@@ -7,6 +7,11 @@
     symbols: '\1F4BB';
     suffix: " ";
   }
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
   
 ul#menu li{
     display: inline;
